---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    procedure some_params(a, b : int)\n        % should be visible\n        var me := a + b\n    end some_params\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(2)
    Module@(src/main.t:0..115): "<root>"@(dummy)
      StmtBody@(src/main.t:5..110): []
        StmtItem@(src/main.t:5..110): ItemId(1)
          Subprogram@(src/main.t:5..110): "some_params"@(src/main.t:15..26) [
            "a"@(src/main.t:27..28),
            "b"@(src/main.t:30..31)
          ]
            Primitive@(src/main.t:34..37): Int
            Primitive@(src/main.t:34..37): Int
            Void@(src/main.t:5..38)
            StmtBody@(src/main.t:75..90): ["a"@(src/main.t:27..28), "b"@(src/main.t:30..31)]
              StmtItem@(src/main.t:75..90): ItemId(0)
                ConstVar@(src/main.t:75..90): var "me"@(src/main.t:79..81)
                  ExprBody@(src/main.t:85..90)
                    Binary@(src/main.t:85..90): Add
                      Name@(src/main.t:85..86): "a"@(src/main.t:27..28)
                      Name@(src/main.t:89..90): "b"@(src/main.t:30..31)
